force-app/main/default/objects/Division_Configuration__mdt/Division_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Experience Site Knowledge Base divisions.</description>
    <label>Division Configuration</label>
    <pluralLabel>Division Configurations</pluralLabel>
</CustomObject>