force-app/main/default/objects/Division_Configuration__mdt/fields/Division_Value__c.field-meta.xml
<CustomField>
    <fullName>Division_Value__c</fullName>
    <label>Division Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>