force-app/main/default/objects/Division_Configuration__mdt/fields/Logo_Path__c.field-meta.xml
<CustomField>
    <fullName>Logo_Path__c</fullName>
    <label>Logo Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>