force-app/main/default/objects/Division_Configuration__mdt/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>